@@ -19,6 +19,8 @@ package org.spockframework.smoke.parameterization
 import org.codehaus.groovy.runtime.typehandling.GroovyCastException
 import org.spockframework.EmbeddedSpecification
 import org.spockframework.compiler.InvalidSpecCompileException
+import org.spockframework.runtime.SpockExecutionException
+import spock.lang.FailsWith
 import spock.lang.Issue
 
 /**
@@ -70,60 +72,29 @@ class MethodParameters extends EmbeddedSpecification {
     y << [1, 2]
   }
 
-  def "fewer parameters than data variables"() {
-    when:
-    compiler.compileSpecBody """
-def foo(x) {
-  expect:
-  x == y
+  def "fewer parameters than data variables"(x) {
+    expect:
+    x == y
 
-  where:
-  x << [1, 2]
-  y << [1, 2]
-}
-    """
-
-    then:
-    thrown(InvalidSpecCompileException)
+    where:
+    x << [1, 2]
+    y << [1, 2]
   }
 
-  def "more parameters than data variables"() {
-    when:
-    compiler.compileSpecBody """
-def foo(x, y, z) {
-  expect:
-  x == y
+  @FailsWith(SpockExecutionException)
+  def "more parameters than data variables throw exception if not injected by some extension"(x, y, z) {
+    expect:
+    x == y
+    z == null
 
-  where:
-  x << [1, 2]
-  y << [1, 2]
-}
-    """
-
-    then:
-    thrown(InvalidSpecCompileException)
-  }
-
-
-  def "parameter that is not a data variable"() {
-    when:
-    compiler.compileSpecBody """
-def foo(x, a) {
-  expect:
-  x == x
-
-  where:
-  x << [1, 2]
-}
-    """
-
-    then:
-    thrown(InvalidSpecCompileException)
+    where:
+    x << [1, 2]
+    y << [1, 2]
   }
 
   def "data variable that is not a parameter"() {
-    when:
-    compiler.compileSpecBody """
+    expect:
+    runner.runSpecBody """
 def foo(x) {
   expect:
   x == y
@@ -133,13 +104,10 @@ def foo(x) {
 }
     """
 
-    then:
-    thrown(InvalidSpecCompileException)
-
     where:
     parameterizations << [
         "x << [1,2]; y << [1, 2]",
-        "[x, y] << [[1, 2], [1, 2]]",
+        "[x, y] << [[1, 1], [2, 2]]",
         "x << [1, 2]; y = x"
     ]
   }
@@ -178,5 +146,12 @@ def foo(x, ClassLoader y) {
     where:
     x << [1, 2]
     y << [2, 4]
+  }
+
+  @Issue("https://github.com/spockframework/spock/issues/652")
+  @FailsWith(SpockExecutionException)
+  def "method parameters that are eventually provided by extensions throw an exception at runtime if not set"(x) {
+    expect:
+    x == null
   }
 }
